# cmake_tutor1

./: .ccls  CMakeLists.txt  README.md
apps/: hello_world.c
include/: displaymsg.h  msgtype.h
src/: displaymsg.c
